--- a/111.md
+++ b/111.md
@@ -14,3 +14,6 @@ http://v.zglcsc.net/detail/movie?apuid=d817eed28db348cea9bfdb29f9589c36&bLevel=6
 获取m3u8地址
 
 http://pan.baidu.com/share/streaming?uk=432267508&fid=985807570817150&path=&type=M3U8_AUTO_480&shareid=2465011477&albumid=0&sign=7f0927fe72466e21f43154d91dbbf19b85877d93&timestamp=1590205347&devuid=0d68f6f3235ea32b35f70f0e8ffd9d649459ee19&version=6.9.3&channel=iPhone%20OS_9.2_iPhone%206Plus_chunlei_1099a_wifi&clienttype=1&esl=1&isplayer=1
+
+
+netdisk;6.9.1;iPhone 6Plus;ios-iphone;9.1;zh_CN
