--- a/111.md
+++ b/111.md
@@ -17,3 +17,16 @@ http://pan.baidu.com/share/streaming?uk=432267508&fid=985807570817150&path=&type
 
 
 netdisk;6.9.1;iPhone 6Plus;ios-iphone;9.1;zh_CN
+
+
+
+暴躁喷火龙, [29.05.20 18:55]
+豆瓣资源（http://www.doubanzy.com/）
+高清资源（http://gaoqingzy.com/）
+977资源（http://www.1977zy.com/）
+172资源（http://www.172zy.net/),
+八戒资源（http://www.bajiezy.net/）
+卧龙资源（http://wolongzy.net/）
+筋斗云资源（jdyzy.cc (http://%E7%AD%8B%E6%96%97%E4%BA%91%E8%B5%84%E6%BA%90%EF%BC%88jdyzy.cc))
+最快资源（http://zuikzy.com）
+速播资源（https://www.subo8988.com/）
